# lab06

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
banking/: CMakeLists.txt
tests/: test.cpp
